--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -62,52 +62,53 @@ jobs:
     with:
       kernelsu_variant: ${{ inputs.kernelsu_variant }}
 
-  build-kernel-a12-5-10:
-    uses: ./.github/workflows/kernel-a12-5.10.yml
-    secrets: inherit
-    with:
-      make_release: true
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-      # # kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
-      version: ${{ inputs.version }}
-      use_zram: ${{ inputs.use_zram }}
-      use_kpm: ${{ inputs.use_kpm }}
-  build-kernel-a13-5-10:
-    uses: ./.github/workflows/kernel-a13-5.10.yml
-    secrets: inherit
-    with:
-      make_release: ${{ inputs.make_release }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+#  build-kernel-a12-5-10:
+#    uses: ./.github/workflows/kernel-a12-5.10.yml
+#    secrets: inherit
+#    with:
+#      make_release: true
+#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+#      kernelsu_branch: ${{ inputs.kernelsu_branch }}
       # kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
-      version: ${{ inputs.version }}
-      use_zram: ${{ inputs.use_zram }}
-      use_kpm: ${{ inputs.use_kpm }}
+#      version: ${{ inputs.version }}
+#      use_zram: ${{ inputs.use_zram }}
+#      use_kpm: ${{ inputs.use_kpm }}
 
-  build-kernel-a13-5-15:
-    uses: ./.github/workflows/kernel-a13-5.15.yml
-    secrets: inherit
-    with:
-      make_release: ${{ inputs.make_release }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+#  build-kernel-a13-5-10:
+#    uses: ./.github/workflows/kernel-a13-5.10.yml
+#    secrets: inherit
+#    with:
+#      make_release: ${{ inputs.make_release }}
+#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+#      kernelsu_branch: ${{ inputs.kernelsu_branch }}
       # kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
-      version: ${{ inputs.version }}
-      use_zram: ${{ inputs.use_zram }}
-      use_kpm: ${{ inputs.use_kpm }}
+#      version: ${{ inputs.version }}
+#      use_zram: ${{ inputs.use_zram }}
+#      use_kpm: ${{ inputs.use_kpm }}
 
-  build-kernel-a14-5-15:
-    uses: ./.github/workflows/kernel-a14-5.15.yml
-    secrets: inherit
-    with:
-      make_release: ${{ inputs.make_release }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+#  build-kernel-a13-5-15:
+#    uses: ./.github/workflows/kernel-a13-5.15.yml
+#    secrets: inherit
+#    with:
+#      make_release: ${{ inputs.make_release }}
+#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+#      kernelsu_branch: ${{ inputs.kernelsu_branch }}
       # kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
-      version: ${{ inputs.version }}
-      use_zram: ${{ inputs.use_zram }}
-      use_kpm: ${{ inputs.use_kpm }}
+#      version: ${{ inputs.version }}
+#      use_zram: ${{ inputs.use_zram }}
+#      use_kpm: ${{ inputs.use_kpm }}
+
+#  build-kernel-a14-5-15:
+#    uses: ./.github/workflows/kernel-a14-5.15.yml
+#    secrets: inherit
+#    with:
+#      make_release: ${{ inputs.make_release }}
+#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+#      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      # kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+#      version: ${{ inputs.version }}
+#      use_zram: ${{ inputs.use_zram }}
+#      use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a14-6-1:
     uses: ./.github/workflows/kernel-a14-6.1.yml
@@ -121,17 +122,17 @@ jobs:
       use_zram: ${{ inputs.use_zram }}
       use_kpm: ${{ inputs.use_kpm }}
 
-  build-kernel-a15-6-6:
-    uses: ./.github/workflows/kernel-a15-6.6.yml
-    secrets: inherit
-    with:
-      make_release: ${{ inputs.make_release }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+#  build-kernel-a15-6-6:
+#    uses: ./.github/workflows/kernel-a15-6.6.yml
+#    secrets: inherit
+#    with:
+#      make_release: ${{ inputs.make_release }}
+#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+#      kernelsu_branch: ${{ inputs.kernelsu_branch }}
       # kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
-      version: ${{ inputs.version }}
-      use_zram: ${{ inputs.use_zram }}
-      use_kpm: ${{ inputs.use_kpm }}
+#      version: ${{ inputs.version }}
+#      use_zram: ${{ inputs.use_zram }}
+#      use_kpm: ${{ inputs.use_kpm }}
 
   trigger-release:
     runs-on: ubuntu-latest
@@ -140,17 +141,17 @@ jobs:
       actions: write
     needs:
         - get_manager
-        - build-kernel-a12-5-10
-        - build-kernel-a13-5-10
-        - build-kernel-a13-5-15
-        - build-kernel-a14-5-15
+        #- build-kernel-a12-5-10
+        #- build-kernel-a13-5-10
+        #- build-kernel-a13-5-15
+        #- build-kernel-a14-5-15
         - build-kernel-a14-6-1
-        - build-kernel-a15-6-6
+        #- build-kernel-a15-6-6
     if: ${{ inputs.make_release }}
     env:
-      REPO_OWNER: ShirkNeko
+      REPO_OWNER: Kavi
       REPO_NAME: GKI_KernelSU_SUSFS
-      GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
       RELEASE_NAME: "GKI内核: ${{ inputs.kernelsu_variant == 'Next' && 'KernelSU-' || '' }} ${{ inputs.kernelsu_variant }}"
 
@@ -342,7 +343,7 @@ jobs:
       # Get the Latest Tag from GitHub
       - name: 生成和创建新标签
         env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN  }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
             # Fetch the latest tag from GitHub (this is the latest tag based on the GitHub API)
             LATEST_TAG=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[0].name')
@@ -394,7 +395,7 @@ jobs:
 
       # 如果 make_release 为 true，则创建 GitHub 发布并上传文件
       - name: Create GitHub Release
-        uses: actions/create-release@v1
+        uses: actions/create-release@v4
         with:
           tag_name: ${{ env.NEW_TAG }}  # Use the generated tag for the release
           prerelease: true  # Mark the release as a pre-release
@@ -418,21 +419,20 @@ jobs:
               gh release upload ${{ env.NEW_TAG }} "$file"
           done
 
-      # Display Files Uploaded
       - name: Display Files Uploaded
         run: |
           echo "GitHub release created with the following files:"
           ls ./downloaded-artifacts/**/*
 
-      - name: send telegram message on push
-        env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          TELEGRAM_MESSAGE_THREAD_ID: ${{ secrets.TELEGRAM_MESSAGE_THREAD_ID }}
-        run: |
-            curl -X POST "https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage" \
-            -d "chat_id=$TELEGRAM_CHAT_ID" \
-            -d "message_thread_id=$TELEGRAM_MESSAGE_THREAD_ID" \
-            -d "text=Latest release: 
-            https://github.com/ShirkNeko/GKI_KernelSU_SUSFS/releases/tag/${{ env.NEW_TAG }}
-            ${{ env.RELEASE_NOTES }}"
+     # - name: send telegram message on push
+     #   env:
+     #     TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+     #     TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+     #     TELEGRAM_MESSAGE_THREAD_ID: ${{ secrets.TELEGRAM_MESSAGE_THREAD_ID }}
+     #   run: |
+     #       curl -X POST "https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage" \
+     #       -d "chat_id=$TELEGRAM_CHAT_ID" \
+     #       -d "message_thread_id=$TELEGRAM_MESSAGE_THREAD_ID" \
+     #       -d "text=Latest release: 
+     #       https://github.com/ShirkNeko/GKI_KernelSU_SUSFS/releases/tag/${{ env.NEW_TAG }}
+     #       ${{ env.RELEASE_NOTES }}"
