--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -151,7 +151,7 @@ jobs:
     env:
       REPO_OWNER: Kavi
       REPO_NAME: GKI_KernelSU_SUSFS
-      GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       RELEASE_NAME: "GKI内核: ${{ inputs.kernelsu_variant == 'Next' && 'KernelSU-' || '' }} ${{ inputs.kernelsu_variant }}"
 
