--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -149,7 +149,7 @@ jobs:
         #- build-kernel-a15-6-6
     if: ${{ inputs.make_release }}
     env:
-      REPO_OWNER: ShirkNeko
+      REPO_OWNER: guruji-byte  # Changed to your username
       REPO_NAME: GKI_KernelSU_SUSFS
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -182,9 +182,11 @@ jobs:
         -> https://github.com/sidex15/ksu_module_susfs
         
     steps:
-      # Checkout the code
+      # Checkout the code with full history and tags
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Required to access tags
 
       - name: 确定分支为 KernelSU-${{ inputs.kernelsu_variant }}
         if: ${{ inputs.kernelsu_branch == 'Dev(开发)' || inputs.kernelsu_variant == 'MKSU' || inputs.kernelsu_variant == 'SukiSU'  }}
@@ -253,34 +255,51 @@ jobs:
           echo "KernelSU Reference: $KSU_REF"
           echo "KernelSU URL: $KSU_URL"
 
-      - name: 获取提交哈希值并生成提交 URL
+      # Dynamic commit detection for SUSFS - only shows commits for built kernels
+      - name: 获取 SUSFS 提交信息 (动态)
         run: |
           GITLAB_OWNER="simonpunk"
           GITLAB_REPO="susfs4ksu"
-
+          
+          # Map job IDs to SUSFS branches
           declare -A BRANCH_MAP=(
-            ["gki_android12_5_10"]="gki-android12-5.10"
-            ["gki_android13_5_10"]="gki-android13-5.10"
-            ["gki_android13_5_15"]="gki-android13-5.15"
-            ["gki_android14_5_15"]="gki-android14-5.15"
-            ["gki_android14_6_1"]="gki-android14-6.1"
-            ["gki_android15_6_6"]="gki-android15-6.6"
+            ["build-kernel-a12-5-10"]="gki-android12-5.10"
+            ["build-kernel-a13-5-10"]="gki-android13-5.10"
+            ["build-kernel-a13-5-15"]="gki-android13-5.15"
+            ["build-kernel-a14-5-15"]="gki-android14-5.15"
+            ["build-kernel-a14-6-1"]="gki-android14-6.1"
+            ["build-kernel-a15-6-6"]="gki-android15-6.6"
           )
-
-          for var_name in "${!BRANCH_MAP[@]}"; do
-            branch_name="${BRANCH_MAP[$var_name]}"
-            COMMIT_HASH=$(git ls-remote https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git refs/heads/$branch_name | awk '{ print $1 }')
-
-            if [[ -n "$COMMIT_HASH" ]]; then
-              COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$COMMIT_HASH"
-              echo "$branch_name Commit: $COMMIT_HASH"
-              echo "$branch_name Commit URL: $COMMIT_URL"
-
-              # Store commit hash and commit URL in GitHub environment
-              echo "COMMIT_HASH_${var_name}=$COMMIT_HASH" >> "$GITHUB_ENV"
-              echo "COMMIT_URL_${var_name}=$COMMIT_URL" >> "$GITHUB_ENV"
+          
+          # Initialize variable to store commit information
+          COMMIT_INFO=""
+          
+          # Loop through all possible jobs
+          for job_id in "${!BRANCH_MAP[@]}"; do
+            # Check if this job is in the needs list
+            if grep -q "$job_id" <<< "$NEEDS_LIST"; then
+              branch_name="${BRANCH_MAP[$job_id]}"
+              echo "Checking SUSFS branch for job: $job_id -> $branch_name"
+              
+              COMMIT_HASH=$(git ls-remote https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git refs/heads/$branch_name | awk '{ print $1 }')
+              
+              if [[ -n "$COMMIT_HASH" ]]; then
+                COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$COMMIT_HASH"
+                echo "  - $branch_name: $COMMIT_HASH"
+                
+                # Add to commit info for release notes
+                COMMIT_INFO+="  - $branch_name: [$COMMIT_HASH]($COMMIT_URL)"$'\n'
+              fi
             fi
           done
+          
+          # Store the formatted commit info
+          echo "COMMIT_INFO<<EOF" >> $GITHUB_ENV
+          echo "$COMMIT_INFO" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+        env:
+          # Get list of needed jobs from workflow context
+          NEEDS_LIST: ${{ toJSON(needs) }}
 
       - name: 将提交哈希值和链接添加到 `RELEASE_NOTES` 中，并将 KernelSU-Next 引用添加到 `RELEASE_NOTES` 中。
         run: |
@@ -316,7 +335,7 @@ jobs:
             echo "Unknown variant"
           fi
           
-      - name: 将提交哈希值和链接添加到 `RELEASE_NOTES` 中，并将 KernelSU-Next 引用添加到 `RELEASE_NOTES` 中。
+      - name: 将 SUSFS 提交信息添加到 `RELEASE_NOTES`
         run: |
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
           echo "$RELEASE_NOTES" >> $GITHUB_ENV
@@ -330,12 +349,7 @@ jobs:
           echo "提交的哈希值与链接(以下提交指的是,本次编译时,KSU或SUSFS所在的进度):" >> $GITHUB_ENV
           echo "- **KernelSU为${{ inputs.kernelsu_variant }}-${{ inputs.kernelsu_branch }}** (提交): [$KSU_REF]($KSU_URL)" >> $GITHUB_ENV
           echo "- **SUSFS4KSU** (提交):" >> $GITHUB_ENV
-          echo "  - gki-android12-5.10: [$COMMIT_HASH_gki_android12_5_10]($COMMIT_URL_gki_android12_5_10)" >> $GITHUB_ENV
-          echo "  - gki-android13-5.10: [$COMMIT_HASH_gki_android13_5_10]($COMMIT_URL_gki_android13_5_10)" >> $GITHUB_ENV
-          echo "  - gki-android13-5.15: [$COMMIT_HASH_gki_android13_5_15]($COMMIT_URL_gki_android13_5_15)" >> $GITHUB_ENV
-          echo "  - gki-android14-5.15: [$COMMIT_HASH_gki_android14_5_15]($COMMIT_URL_gki_android14_5_15)" >> $GITHUB_ENV
-          echo "  - gki-android14-6.1: [$COMMIT_HASH_gki_android14_6_1]($COMMIT_URL_gki_android14_6_1)" >> $GITHUB_ENV
-          echo "  - gki-android15-6.6: [$COMMIT_HASH_gki_android15_6_6]($COMMIT_URL_gki_android15_6_6)" >> $GITHUB_ENV
+          echo "${{ env.COMMIT_INFO }}" >> $GITHUB_ENV
           echo "" >> $GITHUB_ENV
           echo "</details>" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -345,7 +359,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-            # Fetch the latest tag from GitHub (this is the latest tag based on the GitHub API)
+            # Fetch the latest tag from YOUR repository
             LATEST_TAG=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[0].name')
             if [ -z "$LATEST_TAG" ]; then
               LATEST_TAG="v1.5.5-r0"
@@ -356,12 +370,12 @@ jobs:
             # Output the new tag to be used
             echo "New tag: $NEW_TAG"
             
-            # Set the new tag as an environment variable to be used in later steps
+            # Set the new tag as an environment variable
             echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
             
-            # Create the tag in the repository
+            # Create the tag and push to YOUR repository
             git tag $NEW_TAG
-            git push --tags
+            git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/guruji-byte/GKI_KernelSU_SUSFS.git" $NEW_TAG
 
       # 下载 A12 的附件（仅当 A12 生成成功或输入为 true 或为空时）
       - name: Download Artifacts
@@ -397,7 +411,6 @@ jobs:
       - name: Create GitHub Release
         uses: actions/create-release@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ env.NEW_TAG }}  # Use the generated tag for the release
           prerelease: true  # Mark the release as a pre-release
           release_name: ${{ env.RELEASE_NAME }} # Pass the RELEASE_NAME to the action
@@ -407,25 +420,24 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # 先传管理器
-          echo "Uploading $file..."
-          gh release upload ${{ env.NEW_TAG }} "./downloaded-artifacts/*Manager*/*"
-          # 再传其他
-          for file in ./downloaded-artifacts/*_kernel-*/*; do
-              # Skip directories
-              if [ -d "$file" ]; then
-                  continue
-              fi
-
-              # Upload the file to the GitHub release
-              echo "Uploading $file..."
-              gh release upload ${{ env.NEW_TAG }} "$file"
+          # 上传管理器文件
+          if ls ./downloaded-artifacts/*Manager*/* 1> /dev/null 2>&1; then
+            echo "上传管理器文件..."
+            gh release upload ${{ env.NEW_TAG }} ./downloaded-artifacts/*Manager*/*
+          fi
+          
+          # 上传内核文件
+          for dir in ./downloaded-artifacts/*_kernel-*; do
+            if [ -d "$dir" ]; then
+              echo "上传 $dir 中的文件..."
+              gh release upload ${{ env.NEW_TAG }} $dir/*
+            fi
           done
 
       - name: Display Files Uploaded
         run: |
           echo "GitHub release created with the following files:"
-          ls ./downloaded-artifacts/**/*
+          find ./downloaded-artifacts -type f
 
      # - name: send telegram message on push
      #   env:
@@ -437,5 +449,5 @@ jobs:
      #       -d "chat_id=$TELEGRAM_CHAT_ID" \
      #       -d "message_thread_id=$TELEGRAM_MESSAGE_THREAD_ID" \
      #       -d "text=Latest release: 
-     #       https://github.com/ShirkNeko/GKI_KernelSU_SUSFS/releases/tag/${{ env.NEW_TAG }}
+     #       https://github.com/guruji-byte/GKI_KernelSU_SUSFS/releases/tag/${{ env.NEW_TAG }}
      #       ${{ env.RELEASE_NOTES }}"
