--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -341,7 +341,9 @@ jobs:
           esac
 
       - name: Create GitHub Release
-        uses: actions/create-release@v2
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ env.NEW_TAG }}
           prerelease: true
