--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -1,9 +1,9 @@
-name: 测试发布
+name: Test Release
 
 permissions:
   contents: write
   actions: write
-  
+
 on:
   workflow_dispatch:
     inputs:
@@ -13,7 +13,7 @@ on:
         type: boolean
         default: true
       kernelsu_variant:
-        description: "选择 KernelSU"
+        description: "Select KernelSU"
         required: true
         type: choice
         options:
@@ -23,7 +23,7 @@ on:
           - SukiSU
         default: SukiSU
       kernelsu_branch:
-        description: "选择 ksu 分支"
+        description: "Select KSU branch"
         required: true
         type: choice
         options:
@@ -32,36 +32,69 @@ on:
           - Other(其他/指定)
         default: Dev(开发)
       version:
-        description: '自定义版本名(如5.10.198后面的字符/留空则使用默认版本号)'
+        description: 'Custom version name (characters after 5.10.198 / leave blank to use default version number)'
         required: false
         type: string
       use_zram:
-        description: '是否开启增加更多ZRAM算法?'
+        description: 'Whether to enable more ZRAM algorithms?'
         required: true
         type: boolean
         default: true
       use_kpm:
-        description: '是否开启KPM功能?'
+        description: 'Whether to enable KPM feature?'
         required: true
         type: boolean
         default: true
       get_manager:
-        description: '是否同时获取最新KSU管理器?'
+        description: 'Whether to get the latest KSU manager at the same time?'
         required: true
         type: boolean
         default: false
+      build_a12_5_10:
+        description: 'Do you want to build kernel-a12-5-10?'
+        required: false
+        type: boolean
+        default: false
+      build_a13_5_10:
+        description: 'Do you want to build kernel-a13-5-10?'
+        required: false
+        type: boolean
+        default: false
+      build_a13_5_15:
+        description: 'Do you want to build kernel-a13-5-15?'
+        required: false
+        type: boolean
+        default: false
+      build_a14_5_15:
+        description: 'Do you want to build kernel-a14-5-15?'
+        required: false
+        type: boolean
+        default: false
+      build_a14_6_1:
+        description: 'Do you want to build kernel-a14-6-1?'
+        required: false
+        type: boolean
+        default: false
+      build_a15_6_6:
+        description: 'Do you want to build kernel-a15-6-6?'
+        required: false
+        type: boolean
+        default: false
+
 jobs:
   get_manager:
+    if: ${{ inputs.get_manager }}
     uses: ./.github/workflows/get-manager.yml
     secrets: inherit
     with:
       kernelsu_variant: ${{ inputs.kernelsu_variant }}
 
   build-kernel-a12-5-10:
+    if: ${{ inputs.build_a12_5_10 }}
     uses: ./.github/workflows/kernel-a12-5.10.yml
     secrets: inherit
     with:
-      make_release: true
+      make_release: ${{ inputs.make_release }}
       kernelsu_variant: ${{ inputs.kernelsu_variant }}
       kernelsu_branch: ${{ inputs.kernelsu_branch }}
       version: ${{ inputs.version }}
@@ -69,6 +102,7 @@ jobs:
       use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a13-5-10:
+    if: ${{ inputs.build_a13_5_10 }}
     uses: ./.github/workflows/kernel-a13-5.10.yml
     secrets: inherit
     with:
@@ -80,6 +114,7 @@ jobs:
       use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a13-5-15:
+    if: ${{ inputs.build_a13_5_15 }}
     uses: ./.github/workflows/kernel-a13-5.15.yml
     secrets: inherit
     with:
@@ -91,6 +126,7 @@ jobs:
       use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a14-5-15:
+    if: ${{ inputs.build_a14_5_15 }}
     uses: ./.github/workflows/kernel-a14-5.15.yml
     secrets: inherit
     with:
@@ -102,6 +138,7 @@ jobs:
       use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a14-6-1:
+    if: ${{ inputs.build_a14_6_1 }}
     uses: ./.github/workflows/kernel-a14-6.1.yml
     secrets: inherit
     with:
@@ -113,6 +150,7 @@ jobs:
       use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a15-6-6:
+    if: ${{ inputs.build_a15_6_6 }}
     uses: ./.github/workflows/kernel-a15-6.6.yml
     secrets: inherit
     with:
@@ -129,45 +167,43 @@ jobs:
       contents: write
       actions: write
     needs:
-        - get_manager
-        - build-kernel-a12-5-10
-        - build-kernel-a13-5-10
-        - build-kernel-a13-5-15
-        - build-kernel-a14-5-15
-        - build-kernel-a14-6-1
-        - build-kernel-a15-6-6
+      - get_manager
+      - build-kernel-a12-5-10
+      - build-kernel-a13-5-10
+      - build-kernel-a13-5-15
+      - build-kernel-a14-5-15
+      - build-kernel-a14-6-1
+      - build-kernel-a15-6-6
     if: ${{ inputs.make_release }}
     env:
       REPO_OWNER: guruji-byte
       REPO_NAME: GKI_KernelSU_SUSFS
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      RELEASE_NAME: "GKI内核: ${{ inputs.kernelsu_variant == 'Next' && 'KernelSU-' || '' }} ${{ inputs.kernelsu_variant }}"
-
+      RELEASE_NAME: "GKI kernel: ${{ inputs.kernelsu_variant == 'Next' && 'KernelSU-' || '' }} ${{ inputs.kernelsu_variant }}"
       RELEASE_NOTES: |
-        此发布包含 **${{ inputs.kernelsu_variant == 'Next' && 'KernelSU' || '' }}${{ inputs.kernelsu_variant }},请注意此处的KSU版本** 、SUSFS v1.5.7 、 LZ4KD
+        This release includes **${{ inputs.kernelsu_variant == 'Next' && 'KernelSU' || '' }}${{ inputs.kernelsu_variant }}, please note the KSU version here** , SUSFS v1.5.7 , LZ4KD
 
-        功能:
+        Features:
         -> ${{ inputs.kernelsu_variant == 'Next' && 'KernelSU-' || '' }}${{ inputs.kernelsu_variant }}-${{ inputs.kernelsu_branch }}
         -> SUSFS ඞ v1.5.7
-        -> 手动Syscall Hooks,实现更好的隐藏效果
-        -> Magic Mount 支持
-        -> 简单隐藏 LineageOS 检测
-        -> 徒劳隐藏 jit-zygote-cache 检测
-        -> Wireguard 支持
-        -> BBR 支持
-        ${{ inputs.use_kpm && '-> KPM 支持' || '' }}
-        -> **LZ4KD&ONEPLUS_LZ4K**  ${{ inputs.use_zram && '支持' || '不支持' }}
+        -> Manual Syscall Hooks for better hiding effect
+        -> Magic Mount support
+        -> Simple hiding of LineageOS detection
+        -> Futile hiding of jit-zygote-cache detection
+        -> Wireguard support
+        -> BBR support
+        ${{ inputs.use_kpm && '-> KPM support' || '' }}
+        -> **LZ4KD&ONEPLUS_LZ4K**  ${{ inputs.use_zram && 'supported' || 'not supported' }}
         
         <details>
         
-        <summary>备注:</summary>
-        - -> 在SUS SU 模式 2 下, 将显示为禁用或不兼容, 原因是(编译内核时)使用了非kprobe钩子 ,并且不再需要(非kprobe钩子)!
-        - -> 在最新版的susfs, 使用Kernel Flasher刷入AK3压缩包会变砖, 尝试 https://github.com/libxzr/HorizonKernelFlasher!
+        <summary>Notes:</summary>
+        - -> In SUS SU mode 2, it will show as disabled or incompatible because (when compiling the kernel) non-kprobe hooks are used, and (non-kprobe hooks) are no longer needed!
+        - -> In the latest version of susfs, using Kernel Flasher to flash AK3 zip will brick the device, try https://github.com/libxzr/HorizonKernelFlasher!
 
         </details>
 
-        模块: 
+        Module: 
         -> https://github.com/sidex15/ksu_module_susfs
         
     steps:
@@ -176,8 +212,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 确定分支为 KernelSU-${{ inputs.kernelsu_variant }}
-        if: ${{ inputs.kernelsu_branch == 'Dev(开发)' || inputs.kernelsu_variant == 'MKSU' || inputs.kernelsu_variant == 'SukiSU'  }}
+      - name: Determine branch for KernelSU-${{ inputs.kernelsu_variant }}
+        if: ${{ inputs.kernelsu_branch == 'Dev(开发)' || inputs.kernelsu_variant == 'MKSU' || inputs.kernelsu_variant == 'SukiSU' }}
         run: |
           if [[ "${{ inputs.kernelsu_variant }}" == "Official" || "${{ inputs.kernelsu_variant }}" == "MKSU" ]]; then
             BRANCH="main"
@@ -191,7 +227,7 @@ jobs:
           fi
           echo "KSU_BRANCH=$BRANCH" >> $GITHUB_ENV
 
-      - name: 获取提交哈希值或标签并生成 URL
+      - name: Get commit hash or tag and generate URL
         run: |
           if [ "${{ inputs.kernelsu_variant }}" == "Official" ]; then
             REPO_URL="https://github.com/tiann/KernelSU.git"
@@ -225,52 +261,79 @@ jobs:
           echo "KSU_REF=$KSU_REF" >> $GITHUB_ENV
           echo "KSU_URL=$KSU_URL" >> $GITHUB_ENV
 
-      - name: 获取 SUSFS 提交信息 (动态)
+      - name: Get SUSFS commit information (dynamic)
         run: |
           GITLAB_OWNER="simonpunk"
           GITLAB_REPO="susfs4ksu"
           
-          # Define job-to-branch mapping
-          declare -A BRANCH_MAP=(
-            ["build-kernel-a12-5-10"]="gki-android12-5.10"
-            ["build-kernel-a13-5-10"]="gki-android13-5.10"
-            ["build-kernel-a13-5-15"]="gki-android13-5.15"
-            ["build-kernel-a14-5-15"]="gki-android14-5.15"
-            ["build-kernel-a14-6-1"]="gki-android14-6.1"
-            ["build-kernel-a15-6-6"]="gki-android15-6.6"
-          )
-          
           COMMIT_INFO=""
-          for job_id in "${!BRANCH_MAP[@]}"; do
-            # Only process if job is in needs list
-            if [[ " ${{ join(needs.*.result, ' ') }} " == *"$job_id"* ]]; then
-              branch_name="${BRANCH_MAP[$job_id]}"
-              COMMIT_HASH=$(git ls-remote https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git refs/heads/$branch_name | awk '{ print $1 }')
-              if [[ -n "$COMMIT_HASH" ]]; then
-                COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$COMMIT_HASH"
-                COMMIT_INFO+="  - $branch_name: [$COMMIT_HASH]($COMMIT_URL)"$'\n'
-              fi
+          if [[ "${{ needs.build-kernel-a12-5-10.result }}" == "success" ]]; then
+            branch_name="gki-android12-5.10"
+            COMMIT_HASH=$(git ls-remote https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git refs/heads/$branch_name | awk '{ print $1 }')
+            if [[ -n "$COMMIT_HASH" ]]; then
+              COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$COMMIT_HASH"
+              COMMIT_INFO+="  - $branch_name: [$COMMIT_HASH]($COMMIT_URL)"$'\n'
             fi
-          done
+          fi
+          if [[ "${{ needs.build-kernel-a13-5-10.result }}" == "success" ]]; then
+            branch_name="gki-android13-5.10"
+            COMMIT_HASH=$(git ls-remote https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git refs/heads/$branch_name | awk '{ print $1 }')
+            if [[ -n "$COMMIT_HASH" ]]; then
+              COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$COMMIT_HASH"
+              COMMIT_INFO+="  - $branch_name: [$COMMIT_HASH]($COMMIT_URL)"$'\n'
+            fi
+          fi
+          if [[ "${{ needs.build-kernel-a13-5-15.result }}" == "success" ]]; then
+            branch_name="gki-android13-5.15"
+            COMMIT_HASH=$(git ls-remote https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git refs/heads/$branch_name | awk '{ print $1 }')
+            if [[ -n "$COMMIT_HASH" ]]; then
+              COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$COMMIT_HASH"
+              COMMIT_INFO+="  - $branch_name: [$COMMIT_HASH]($COMMIT_URL)"$'\n'
+            fi
+          fi
+          if [[ "${{ needs.build-kernel-a14-5-15.result }}" == "success" ]]; then
+            branch_name="gki-android14-5.15"
+            COMMIT_HASH=$(git ls-remote https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git refs/heads/$branch_name | awk '{ print $1 }')
+            if [[ -n "$COMMIT_HASH" ]]; then
+              COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$COMMIT_HASH"
+              COMMIT_INFO+="  - $branch_name: [$COMMIT_HASH]($COMMIT_URL)"$'\n'
+            fi
+          fi
+          if [[ "${{ needs.build-kernel-a14-6-1.result }}" == "success" ]]; then
+            branch_name="gki-android14-6.1"
+            COMMIT_HASH=$(git ls-remote https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git refs/heads/$branch_name | awk '{ print $1 }')
+            if [[ -n "$COMMIT_HASH" ]]; then
+              COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$COMMIT_HASH"
+              COMMIT_INFO+="  - $branch_name: [$COMMIT_HASH]($COMMIT_URL)"$'\n'
+            fi
+          fi
+          if [[ "${{ needs.build-kernel-a15-6-6.result }}" == "success" ]]; then
+            branch_name="gki-android15-6.6"
+            COMMIT_HASH=$(git ls-remote https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git refs/heads/$branch_name | awk '{ print $1 }')
+            if [[ -n "$COMMIT_HASH" ]]; then
+              COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$COMMIT_HASH"
+              COMMIT_INFO+="  - $branch_name: [$COMMIT_HASH]($COMMIT_URL)"$'\n'
+            fi
+          fi
           
           echo "COMMIT_INFO<<EOF" >> $GITHUB_ENV
           echo "$COMMIT_INFO" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
-      - name: 添加管理器信息到RELEASE_NOTES
+      - name: Add manager information to RELEASE_NOTES
         run: |
           case "${{ inputs.kernelsu_variant }}" in
             "Official")
-              MANAGER_INFO="Official 管理器:\n-> https://github.com/tiann/KernelSU"
+              MANAGER_INFO="Official manager:\n-> https://github.com/tiann/KernelSU"
               ;;
             "Next")
-              MANAGER_INFO="Next 管理器:\n-> https://github.com/KernelSU-Next/KernelSU-Next"
+              MANAGER_INFO="Next manager:\n-> https://github.com/KernelSU-Next/KernelSU-Next"
               ;;
             "MKSU")
-              MANAGER_INFO="MKSU 管理器:\n-> https://github.com/5ec1cff/KernelSU"
+              MANAGER_INFO="MKSU manager:\n-> https://github.com/5ec1cff/KernelSU"
               ;;
             "SukiSU")
-              MANAGER_INFO="SukiSU 管理器:\n-> https://github.com/ShirkNeko/SukiSU-Ultra"
+              MANAGER_INFO="SukiSU manager:\n-> https://github.com/ShirkNeko/SukiSU-Ultra"
               ;;
           esac
           
@@ -279,21 +342,21 @@ jobs:
           echo -e "\n$MANAGER_INFO" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
-      - name: 添加提交信息到RELEASE_NOTES
+      - name: Add commit information to RELEASE_NOTES
         run: |
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
           echo "$RELEASE_NOTES" >> $GITHUB_ENV
           echo -e "\nLTO: thin\n" >> $GITHUB_ENV
           echo "<details>" >> $GITHUB_ENV
-          echo -e "\n<summary>提交信息</summary>\n" >> $GITHUB_ENV
-          echo "提交的哈希值与链接:" >> $GITHUB_ENV
-          echo "- **KernelSU为${{ inputs.kernelsu_variant }}-${{ inputs.kernelsu_branch }}**: [$KSU_REF]($KSU_URL)" >> $GITHUB_ENV
+          echo -e "\n<summary>Commit information</summary>\n" >> $GITHUB_ENV
+          echo "Commit hash and link:" >> $GITHUB_ENV
+          echo "- **KernelSU is ${{ inputs.kernelsu_variant }}-${{ inputs.kernelsu_branch }}**: [$KSU_REF]($KSU_URL)" >> $GITHUB_ENV
           echo "- **SUSFS4KSU**:" >> $GITHUB_ENV
           echo "${{ env.COMMIT_INFO }}" >> $GITHUB_ENV
           echo -e "\n</details>" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
-      - name: 生成和创建新标签
+      - name: Generate and create new tag
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -318,7 +381,7 @@ jobs:
         with:
           path: ./downloaded-artifacts
 
-      - name: 设定 KSU 环境变量
+      - name: Set KSU environment variables
         run: |
           case "${{ inputs.kernelsu_variant }}" in
             "Next")
@@ -326,17 +389,17 @@ jobs:
               cd KernelSU-Next
               KSU_VERSION=$((10000 + $(git rev-list --count HEAD) + 200))
               echo "KSU_VERSION=$KSU_VERSION" >> $GITHUB_ENV
-              echo "RELEASE_NAME=\"GKI内核: ${{ inputs.kernelsu_variant }}($KSU_VERSION) & SUSFS v1.5.7\"" >> $GITHUB_ENV
+              echo "RELEASE_NAME=\"GKI kernel: ${{ inputs.kernelsu_variant }}($KSU_VERSION) & SUSFS v1.5.7\"" >> $GITHUB_ENV
               ;;
             "SukiSU")
               git clone --depth=1 https://github.com/SukiSU-Ultra/SukiSU-Ultra.git
               cd SukiSU-Ultra
               KSU_VERSION=$((10000 + $(git rev-list --count HEAD) + 606))
               echo "KSU_VERSION=$KSU_VERSION" >> $GITHUB_ENV
-              echo "RELEASE_NAME=\"GKI内核: ${{ inputs.kernelsu_variant }}($KSU_VERSION) & SUSFS v1.5.7\"" >> $GITHUB_ENV
+              echo "RELEASE_NAME=\"GKI kernel: ${{ inputs.kernelsu_variant }}($KSU_VERSION) & SUSFS v1.5.7\"" >> $GITHUB_ENV
               ;;
             *)
-              echo "RELEASE_NAME=\"GKI内核: ${{ inputs.kernelsu_variant }} & SUSFS v1.5.7\"" >> $GITHUB_ENV
+              echo "RELEASE_NAME=\"GKI kernel: ${{ inputs.kernelsu_variant }} & SUSFS v1.5.7\"" >> $GITHUB_ENV
               ;;
           esac
 
@@ -350,36 +413,23 @@ jobs:
           release_name: ${{ env.RELEASE_NAME }}
           body: ${{ env.RELEASE_NOTES }}
 
-      - name: 上传发布资产
+      - name: Upload release assets
         run: |
-          # 上传管理器文件
+          # Upload manager files
           if ls ./downloaded-artifacts/*Manager*/* 1> /dev/null 2>&1; then
-            echo "上传管理器文件..."
+            echo "Uploading manager files..."
             gh release upload ${{ env.NEW_TAG }} ./downloaded-artifacts/*Manager*/*
           fi
           
-          # 上传内核文件
+          # Upload kernel files
           for dir in ./downloaded-artifacts/*_kernel-*; do
             if [ -d "$dir" ]; then
-              echo "上传 $dir 中的文件..."
+              echo "Uploading files in $dir..."
               gh release upload ${{ env.NEW_TAG }} $dir/*
             fi
           done
 
-      - name: 显示上传文件
+      - name: Show uploaded files
         run: |
-          echo "已上传文件:"
+          echo "Uploaded files:"
           find ./downloaded-artifacts -type f
-
-     # - name: send telegram message on push
-     #   env:
-     #     TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-     #     TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-     #     TELEGRAM_MESSAGE_THREAD_ID: ${{ secrets.TELEGRAM_MESSAGE_THREAD_ID }}
-     #   run: |
-     #       curl -X POST "https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage" \
-     #       -d "chat_id=$TELEGRAM_CHAT_ID" \
-     #       -d "message_thread_id=$TELEGRAM_MESSAGE_THREAD_ID" \
-     #       -d "text=Latest release: 
-     #       https://github.com/guruji-byte/GKI_KernelSU_SUSFS/releases/tag/${{ env.NEW_TAG }}
-     #       ${{ env.RELEASE_NOTES }}"
