--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -13,7 +13,7 @@ on:
         type: boolean
         default: true
       kernelsu_variant:
-        description: 'Select KernelSU'
+        description: "Select KernelSU"
         required: true
         type: choice
         options:
@@ -23,7 +23,7 @@ on:
           - SukiSU
         default: SukiSU
       kernelsu_branch:
-        description: 'Select KSU branch'
+        description: "Select KSU branch"
         required: true
         type: choice
         options:
@@ -64,7 +64,7 @@ jobs:
       kernelsu_variant: inputs.kernelsu_variant
 
   build-kernel-a12-5-10:
-    if: contains(',' + inputs.build_kernels + ',', ',a12-5-10,')
+    if: contains(format(',{0},', inputs.build_kernels), ',a12-5-10,')
     uses: ./.github/workflows/kernel-a12-5.10.yml
     secrets: inherit
     with:
@@ -76,7 +76,7 @@ jobs:
       use_kpm: inputs.use_kpm
 
   build-kernel-a13-5-10:
-    if: contains(',' + inputs.build_kernels + ',', ',a13-5-10,')
+    if: contains(format(',{0},', inputs.build_kernels), ',a13-5-10,')
     uses: ./.github/workflows/kernel-a13-5.10.yml
     secrets: inherit
     with:
@@ -88,7 +88,7 @@ jobs:
       use_kpm: inputs.use_kpm
 
   build-kernel-a13-5-15:
-    if: contains(',' + inputs.build_kernels + ',', ',a13-5-15,')
+    if: contains(format(',{0},', inputs.build_kernels), ',a13-5-15,')
     uses: ./.github/workflows/kernel-a13-5.15.yml
     secrets: inherit
     with:
@@ -100,7 +100,7 @@ jobs:
       use_kpm: inputs.use_kpm
 
   build-kernel-a14-5-15:
-    if: contains(',' + inputs.build_kernels + ',', ',a14-5-15,')
+    if: contains(format(',{0},', inputs.build_kernels), ',a14-5-15,')
     uses: ./.github/workflows/kernel-a14-5.15.yml
     secrets: inherit
     with:
@@ -112,7 +112,7 @@ jobs:
       use_kpm: inputs.use_kpm
 
   build-kernel-a14-6-1:
-    if: contains(',' + inputs.build_kernels + ',', ',a14-6-1,')
+    if: contains(format(',{0},', inputs.build_kernels), ',a14-6-1,')
     uses: ./.github/workflows/kernel-a14-6.1.yml
     secrets: inherit
     with:
@@ -124,7 +124,7 @@ jobs:
       use_kpm: inputs.use_kpm
 
   build-kernel-a15-6-6:
-    if: contains(',' + inputs.build_kernels + ',', ',a15-6-6,')
+    if: contains(format(',{0},', inputs.build_kernels), ',a15-6-6,')
     uses: ./.github/workflows/kernel-a15-6.6.yml
     secrets: inherit
     with:
